# llvm-project

./: 0001-New-Worksharing-WIP-IRBuilder-aggregate (1).patch
clang/include/clang/Basic/: DiagnosticDriverKinds.td
clang/include/clang/Driver/: Options.td
clang/lib/CodeGen/: CGBuiltin.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntimeGPU.cpp  CGStmtOpenMP.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp
clang/lib/CodeGen/Targets/: AMDGPU.cpp
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Parse/: ParseOpenMP.cpp
clang/test/OpenMP/: cancel_codegen.cpp.rej  target_newsimd.cpp  target_parallel_simd_codegen.cpp  target_simdnew.cpp
llvm/lib/Analysis/: InlineCost.cpp
llvm/lib/Frontend/OpenMP/: OMPIRBuilder.cpp  OMPIRBuilder.cpp.rej
llvm/lib/IR/: Instructions.cpp
llvm/lib/LTO/: LTOBackend.cpp
llvm/lib/Passes/: PassBuilderPipelines.cpp
llvm/lib/Transforms/IPO/: FunctionImport.cpp  (+1 more)
llvm/unittests/Frontend/: OpenMPIRBuilderTest.cpp  OpenMPIRBuilderTest.cpp.rej
offload/DeviceRTL/src/: LibC.cpp
offload/test/offloading/: nowait-kernels.cpp
openmp/docs/design/: Runtimes.rst
openmp/libomptarget/include/: device.h  omptarget.h  rtl.h
openmp/libomptarget/plugins/common/JIT/: CMakeLists.txt  JIT.cpp  JIT.h
openmp/libomptarget/src/: omptarget.cpp  rtl.cpp
openmp/runtime/src/: dllexports  kmp.h  kmp_csupport.cpp  kmp_ftn_os.h
simdtest/: a.out  btest.c  error.c  neg.c  out.txt  par.c  reduc-openmp-nvptx64-nvidia-cuda.ll  reduc.c  reduc2-openmp-nvptx64-nvidia-cuda.ll  reduc2.c  rzvernal  test  test-openmp-nvptx64-nvidia-cuda.ll  test.c  test.ll
(+28 files in other folders)
